added user profile view and favorites

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>myFlix App</title>
+    <link rel="icon" href="../img/movie_favicon.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
